# textedit

./: .env.example  .gitignore  README.md  compose.yaml  pyproject.toml
backend/: README.md  db.sqlite3
backend/api/: models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_conversation_document_message.py  0003_postgres_vector.py  0004_documentchunk.py  0005_delete_item.py  0006_documentchunk_end_pos_documentchunk_start_pos.py
backend/llm/: embedding.py  model.py
backend/project/: settings.py
backend/rag/: chunk_text.py  graph.py  prompt.py
backend/vector_db/: content.py
frontend/: .prettierrc.js  README.md  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/components/: MainPage.tsx
frontend/src/components/Chat/: Chat.tsx  ChatCreator.tsx  ChatItem.tsx
frontend/src/components/Documents/: DocumentEditor.tsx  DocumentItem.tsx  DocumentPanel.tsx  FileUploadModal.tsx  HighlightedText.tsx
frontend/src/components/Editor/: Editor.tsx
frontend/src/components/Tools/: ConversationPanel.tsx  ToolsPanel.tsx
frontend/src/hooks/: useConversations.tsx  useDocuments.tsx  useProject.tsx
frontend/src/stores/: ConversationContext.tsx  DocumentContext.tsx  ProjectContext.tsx
frontend/src/types/: conversation.ts  document.ts  index.ts  message.ts
